# playground

./: .gitmodules  24  26  27  28  29  30  todo.txt
2_guessing_game_tutorial/: memo.md
3_common_programming_concepts/: memo.md
bash/: memo.md
bash/variables/: environment-variable.sh  memo.md  shell-variable.sh
chapter_3/: 23.rs  24.rs  26.rs  28.rs  30.rs
cmake/: memo.txt
cmake/step1a/: memo.txt
cmake/step1b/: CMakeLists.txt  main.cpp  memo.txt
cmake/step2a/: memo.txt
cmake/step2b/: memo.txt
cmake/step2c/: CMakeLists.txt  good_morning.cpp  good_morning.hpp  memo.txt
cmake/step2d/: CMakeLists.txt  hello.cpp  main.cpp  memo.txt
cmake/step2e/: CMakeLists.txt  memo.txt
cmake/step3a/: memo.txt
cmake/step3b/: CMakeLists.txt  memo.txt
cpp/printf/: cout.cpp  memo.md  printf.cpp
cpp/round/: main.cpp
dart/: main.dart  memo.txt
go/generics/: go.mod  main_test.go
go/go-fuzzyfinder/: go.mod  go.sum  main.go
go/goreleaser/: go.mod  go.sum  main.go
go/mulmod/: go.mod  go.sum  main.go
html/mozilla/: 00_intro.md  01_css_and_js.html  01_head.md  01_meta_example.html  (+5 more)
java/: memo.md
jsonnet/: dashboard.jsonnet  memo.txt
package/: memo.txt  setup.py
pcap/: README.md  main.go
php/: memo.md  todo.md
python/poetry/poetry-demo/: memo.txt  pyproject.toml
python/poetry/poetry-demo/poetry_demo/: request.py
python/poetry/poetry-demo/tests/: test_google.py
python/pyproject/: Dockerfile  a.py  memo.txt  pyproject.toml
terraform/: log.txt  memo.txt  terraform.tfstate  terraform.tfstate.backup
vim/: README.md  memo.txt  script.vim
(+492 files in other folders)
