[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Yoshihiro Tsuji <yoshihiro.tsuji2@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
